@@ -2700,6 +2700,21 @@ void unit::add_modification(const std::string& type, const config& mod, bool no_
 				} else if (apply_to == "halo") {
 					clear_haloes();
 					cfg_["halo"] = effect["halo"];
+
+				} else if (apply_to == "overlay") {
+					const std::string &add = effect["add"];
+					const std::string &replace = effect["replace"];
+					
+					if (!add.empty()) {
+						std::vector<std::string> temp_overlays = utils::parenthetical_split(add, ',');
+						std::vector<std::string>::iterator it;
+						for (it=temp_overlays.begin();it<temp_overlays.end();it++) {
+							overlays_.push_back( *it );
+						}
+					}
+					else if (!replace.empty()) {
+						overlays_ = utils::parenthetical_split(replace, ',');
+					}
 				}
 			} // end while
 		} else { // for times = per level & level = 0 we still need to rebuild the descriptions
