@@ -27,6 +27,7 @@ Version 1.11.0+svn:
      and recall/recruit events. (FR #16711)
    * Sighted events should be reliable, provided the player does not activate
      delayed shroud updates (which is still a major caveat).
+   * Added [effect] apply_to=overlay
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
